<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/library_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/library_gradient_background"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.studio.jason.application.activity.LibraryActivity">

    <RadioGroup
        android:id="@+id/library_radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radio_title_background"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <RadioButton
            android:id="@+id/library_song_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/song_tab"
            android:checked="true"
            android:textColor="@color/radio_title_color_state" />

        <RadioButton
            android:id="@+id/library_artist_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/artist_tab"
            android:textColor="@color/radio_title_color_state" />

        <RadioButton
            android:id="@+id/library_album_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/album_tab"
            android:textColor="@color/radio_title_color_state" />

    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/library_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/bottom_control_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <include
            layout="@layout/bottom_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </FrameLayout>


</LinearLayout>
